src/styles/partials/views/_single_project.scss
@use "../variables" as *;

.single_project {
    min-height: calc(100vh - 100px);
    padding-top: 86px;

    background: rgb(255, 255, 255);
    background: radial-gradient(circle, rgba(255, 255, 255, 1) 3%, rgba(255, 255, 255, 1) 5%, rgba(228, 228, 228, 1) 100%);

    .type_project {
        background-color: rgb(255, 255, 255);
    }

    .overlay {
        background-color: rgba(0, 0, 0, 0.653);
        opacity: 0;
    }

    img {
        object-fit: cover;
        min-height: 400px;
        object-position: top left;
    }

    .cover_container,
    .info_container {
        display: flex;
        flex-direction: column;
        min-height: calc(400px + 2rem);
        max-height: calc(60vh + 2rem);
    }

    .cover_container > * {
        flex: 1;
        display: flex;
        flex-direction: column;
    }

    .info_container > .card {
        flex: 1;
        min-height: 0;
    }

    .element1 {
        position: sticky;
        top: 0;
        width: 100%;
        background: rgb(255, 255, 255);
        background: linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0) 100%);
    }

    .element2 {
        height: 30px;
        position: sticky;
        bottom: 0;
        width: 100%;
        background: rgb(255, 255, 255);
        background: linear-gradient(0deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0) 100%);
    }
}

.error_404 {
    background-image: url('/DreamShaper_v5_A_lone_astronaut_finds_themselves_in_their_cham_0.jpg');
    background-position: center;
    background-size: cover;
    // background-color: aqua;
}

